--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.8.3",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
